--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,9 +6,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
+a ,span, p{
   color: inherit;
   text-decoration: none;
+  color: '#fff' !important;
 }
 
 * {
